# AI-Backend

./: 16May25.py  README.md  added into img2img.py  img2img.py  main.py  multi_face_processor.py  requirements.txt
face_swap_multi_support/: main.py
resume_agent/: ENHANCED_README.md  README.md  enhanced_resume_analyzer.py  enhanced_web_app.py  requirements.txt  resume_analyzer_app.py  shortlisted_resumes.csv  shortlisting_agent.py  show_all_results.py
resume_agent/resume_results/: aarav_mehta_phone_detailed.json  alex_turner_phone_detailed.json  detailed_resume_results.csv  detailed_resume_results_shortlisting_summary.txt  detailed_resume_results_summary.txt  jane_smith_phone_detailed.json  john_doe_phone_detailed.json  john_smith_detailed.json  priya_ramesh_phone_detailed.json  priya_sharma_phone_detailed.json  (+1 more)
short_story_crew/: README.md  agents.py  config.py  crew.py  dev-requirements.txt  example.py  main.py  pyproject.toml  requirements.txt  setup.py  tasks.py  test_openrouter.py
short_story_crew/outputs/: story_anime_Two_ninjas_compete_in_cooking_20250722_094609.txt  story_drama_python_mainpy_--idea_A_time_traveler_cha_20250721_153156.txt  story_family_a_warm_conersation_between_wife_and_husb_20250721_154003.txt  story_romance_A_robot_falls_in_love_with_a_coffee_mach_20250721_152842.txt
short_story_crew/utils/: __init__.py  logger.py
social_media_content_generator/: DATABASE_LOGGING_SETUP.md  ERROR_LOGGING_UPDATES.md  README.md  debug_env.py  requirements.txt  test_db_logging.py  test_error_logging.py
utils/: face_fuser.py  image_generator.py
(+41 files in other folders)
